pd-2619 Fixed error for opening up records along with fixing the overflow for the records table

--- a/gulp/src/sass/custom.scss
+++ b/gulp/src/sass/custom.scss
@@ -5207,3 +5207,7 @@ div.progress-card {
   white-space: nowrap;
   vertical-align: middle;
 }
+
+.react-bs-container-body{
+  height: 558px !important;
+}
